# project-stargate

./: .gitignore  Makefile  README.md  apphosting.yaml  auth-service-worker.js  config.js  middleware.js  package-lock.json  package.json  server.js  tailwind.config.js
.github/workflows/: deployment.yaml
.idx/: dev.nix
.next/: app-build-manifest.json  trace
.next/cache/webpack/client-development/: 0.pack.gz_  1.pack.gz_  10.pack.gz_  11.pack.gz_  13.pack.gz_  14.pack.gz_  17.pack.gz_  2.pack.gz_  3.pack.gz_  4.pack.gz_  7.pack.gz_  9.pack.gz_  index.pack.gz.old  index.pack.gz_
.next/cache/webpack/client-development-fallback/: index.pack.gz.old
.next/cache/webpack/server-development/: index.pack.gz.old
.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
app/: globals.css  layout.js  page.js
app/api/gemini/: route.js
app/api/socket/: route.js
app/login/: page.js
app/onboarding/: page.js
app/sessions/: page.js
app/sessions/[sessionId]/: page.js
app/sessions/[sessionId]/mobile/: page.js
components/: AuthContext.js  AuthContextProvider.jsx  Header.js  Introduction.js  Introduction.jsx  Loading.jsx  Onboarding.js  Onboarding.jsx
firebase/: auth.js  clientApp.js  serverApp.js
public/: auth-service-worker.js
rag_prep/: firestore_record_manager.py  main.py  pyproject.toml
web_app/: .firebaserc  README.md  apphosting.yaml  build-firebase-config.js  example.env  firestore.indexes.json  firestore.rules  middleware.js  package-lock.json  package.json
web_app/app/: globals.css  layout.js  page.js
web_app/app/login/: page.js
web_app/app/onboarding/: page.js
web_app/app/session/: page.js
web_app/components/: AuthContext.js  ContentWrapper.js  Header.js  Loading.js  Sessions.js
web_app/components/session/: ChatWindow.js  SignalLine.js  Stage.js
web_app/firebase/: serverApp.js
web_app/public/: firebase-config.js  service-worker.js
websockets/: Dockerfile  app.py  chat_management.py  example.env  package-lock.json  package.json  pyproject.toml  server.js  session_management.py
websockets/prompts/: map.py
websockets/prompts/sessions/: core.py
(+4 files in other folders)
